fixed camera button alignment v2

--- a/base.css
+++ b/base.css
@@ -80,28 +80,28 @@ h4, h5 {
 .add-button {
     position: fixed;
     bottom: 90px;
-    right: 77%;
+    right: 50%;
     /*width: 50px;*/
     /*margin-left: -110px;*/
 }
 .cancel-button {
     position: fixed;
     bottom: 80px;
-    right: 75%;
+    right: 50%;
     /*width: 50px;*/
     /*margin-left: -30px;*/
 }
 .camera-button {
     position: fixed;
     bottom: 160px;
-    right: 71%;
+    right: 70%;
     /*width: 50px;*/
     /*margin-left: -30px;*/
 }
 .messages-button {
     position: fixed;
     bottom: 160px;
-    left: 11%;
+    left: 50%;
     /*width: 50px;*/
     /*margin-left: -30px;*/
 }
